lab5 streamAPI sonar